<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="android.com.venusapp.MainActivity">

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="0dp"
        android:layout_height="100dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_launcher" />

    <ImageView
        android:id="@+id/imgOffers"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="0dp"
        android:onClick="offer"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgLogo"
        app:srcCompat="@android:drawable/btn_star_big_on" />

    <ImageView
        android:id="@+id/imgGallery"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:onClick="gallery"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="@+id/imgAppointment"
        app:layout_constraintLeft_toRightOf="@+id/imgAppointment"
        app:layout_constraintRight_toLeftOf="@+id/imgContact"
        app:srcCompat="@mipmap/gallery" />

    <ImageView
        android:id="@+id/imgContact"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:onClick="contact"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="@+id/imgGallery"
        app:layout_constraintLeft_toRightOf="@+id/imgGallery"
        app:layout_constraintRight_toRightOf="parent"
        app:srcCompat="@mipmap/contact" />

    <ImageView
        android:id="@+id/imgAppointment"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginBottom="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:onClick="appointment"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/imgGallery"
        app:srcCompat="@mipmap/appointment" />

    <ImageView
        android:id="@+id/imgAboutUs"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginBottom="71dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:onClick="aboutUs"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toTopOf="@+id/imgAppointment"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/imgDoctors"
        app:srcCompat="@mipmap/aboutus" />

    <ImageView
        android:id="@+id/imgDoctors"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginBottom="0dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:onClick="doctors"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="@+id/imgAboutUs"
        app:layout_constraintLeft_toRightOf="@+id/imgAboutUs"
        app:layout_constraintRight_toLeftOf="@+id/imgServices"
        app:srcCompat="@mipmap/doctor" />

    <ImageView
        android:id="@+id/imgServices"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:cropToPadding="false"
        android:onClick="services"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="@+id/imgDoctors"
        app:layout_constraintLeft_toRightOf="@+id/imgDoctors"
        app:layout_constraintRight_toRightOf="parent"
        app:srcCompat="@mipmap/service" />

    <TextView
        android:id="@+id/txtAboutUs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_about_us"
        app:layout_constraintLeft_toLeftOf="@+id/imgAboutUs"
        app:layout_constraintRight_toRightOf="@+id/imgAboutUs"
        app:layout_constraintTop_toBottomOf="@+id/imgAboutUs" />

    <TextView
        android:id="@+id/txtServices"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_services"
        app:layout_constraintLeft_toLeftOf="@+id/imgServices"
        app:layout_constraintRight_toRightOf="@+id/imgServices"
        app:layout_constraintTop_toBottomOf="@+id/imgServices" />

    <TextView
        android:id="@+id/txtDoctors"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginStart="8dp"
        android:text="@string/lbl_doctors"
        app:layout_constraintLeft_toLeftOf="@+id/imgDoctors"
        app:layout_constraintRight_toRightOf="@+id/imgDoctors"
        app:layout_constraintTop_toBottomOf="@+id/imgDoctors"
        android:layout_marginTop="0dp"
        app:layout_constraintHorizontal_bias="0.487" />

    <TextView
        android:id="@+id/txtcontact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="0dp"
        android:text="@string/lbl_contact"
        app:layout_constraintLeft_toLeftOf="@+id/imgContact"
        app:layout_constraintRight_toRightOf="@+id/imgContact"
        app:layout_constraintTop_toBottomOf="@+id/imgContact" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="0dp"
        android:text="@string/lbl_gallery"
        app:layout_constraintLeft_toLeftOf="@+id/imgGallery"
        app:layout_constraintRight_toRightOf="@+id/imgGallery"
        app:layout_constraintTop_toBottomOf="@+id/imgGallery" />

    <TextView
        android:id="@+id/txtAppointment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="0dp"
        android:text="@string/lbl_appointment"
        app:layout_constraintLeft_toLeftOf="@+id/imgAppointment"
        app:layout_constraintRight_toRightOf="@+id/imgAppointment"
        app:layout_constraintTop_toBottomOf="@+id/imgAppointment" />

    <TextView
        android:id="@+id/txtOffers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="0dp"
        android:text="@string/lbl_offers"
        app:layout_constraintLeft_toLeftOf="@+id/imgOffers"
        app:layout_constraintRight_toRightOf="@+id/imgOffers"
        app:layout_constraintTop_toBottomOf="@+id/imgOffers"
        app:layout_constraintHorizontal_bias="0.333" />

</android.support.constraint.ConstraintLayout>
